spacing mobile fix

--- a/starterOnly/modal.css
+++ b/starterOnly/modal.css
@@ -494,7 +494,7 @@ footer {
 }
 @media screen and (max-width: 800px) {
   
-  
+                                
   
   .hero-section {
     display: block;
@@ -572,7 +572,7 @@ footer {
   }
   .hero-img img {
     border-radius: 10px;
-    margin-top: 40px;
+    margin-top: 20px;
   }
   .hero-section > .btn-signup {
     display: block;
